--- a/BottangoTeddyDriver/Form1.resx
+++ b/BottangoTeddyDriver/Form1.resx
@@ -123,6 +123,13 @@
   <metadata name="animTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <data name="richTextBox1.Text" xml:space="preserve">
+    <value>Teddy Ruxpin and other Worlds of Wonder talker animator program by tventy/20dka
+Source available on GitHub at https://github.com/20dka/BottangoTeddyDriver
+
+For use with Bottango by Evan McMahon (www.bottango.com)
+</value>
+  </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>56</value>
   </metadata>
